<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:gravity="center_horizontal"
                                             android:orientation="vertical"
                                             android:paddingBottom="@dimen/activity_vertical_margin"
                                             android:paddingLeft="@dimen/activity_horizontal_margin"
                                             android:paddingRight="@dimen/activity_horizontal_margin"
                                             android:paddingTop="@dimen/activity_vertical_margin"
                                             tools:context=".RegisterActivity"
                                             android:id="@+id/linearLayout3">

    <ProgressBar
            android:id="@+id/register_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />

    <ScrollView
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                />

        <EditText
                android:id="@+id/domain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/prompt_domain"
                android:inputType="textUri"
                android:padding="10dp"
                />

        <EditText
                android:id="@+id/fullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                />

        <EditText
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:padding="10dp"
                />

        <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                />

        <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="10dp"
                />

        <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#f05924"
                android:text="@string/action_register"
                android:textColor="@android:color/white"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/already_having_account"
                android:textColor="#ccc"
                android:id="@+id/textView3"/>

        <Button
                android:id="@+id/btnRegisterLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#aaa"
                android:text="@string/action_sign_in"
                android:textColor="@android:color/white"
                />

    </ScrollView>

</android.support.constraint.ConstraintLayout>
