<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:gravity="center_horizontal"
                                             tools:context=".LoginActivity"
                                             android:id="@+id/login_container">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <ProgressBar
            android:id="@+id/login_progress"
            style="android:attr/progressBarStyleLarge"
            android:layout_width="@android:dimen/notification_large_icon_width"
            android:layout_height="@android:dimen/notification_large_icon_height"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="@dimen/form_padding">

        <Switch
                android:id="@+id/protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:hint="@string/prompt_https"
                android:textOff="@string/no"
                android:textOn="@string/yes"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"/>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/textInputLayout"
                app:layout_constraintStart_toStartOf="@+id/protocol"
                app:layout_constraintTop_toBottomOf="@+id/protocol"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0">

            <EditText
                    android:id="@+id/domain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_domain"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_weight="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/textInputLayout2"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0">

            <EditText
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_login"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_weight="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/textInputLayout3"
                app:passwordToggleEnabled="true"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0">

            <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/login_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/login_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/holo_red_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/not_having_account"
                android:id="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

        <Button
                android:id="@+id/register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_register"
                app:layout_constraintStart_toStartOf="@+id/login_message"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>